# kata-bootstrap-cpp-googletest

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.py  conanfile.txt
test/: test.cpp
